[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TicTacToe"
version = "0.0.1"
authors = [
    { name="Ian Munro", email="absurd.squirrel@protonmail.com"}
]
description = "A nice game of tic-tac-toe"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
# TODO